tests/paczka2/big_fuzzy/10798951.err
Error in line 1: f03o2 S490 70,6
Error in line 10: Hsd0jPqi S490 54,4
Error in line 19: QZJPX4he S926 5,3
Error in line 12: f03o2 A833 416,4
Error in line 36: UjWHtdH S490 12,8
Error in line 44: pbC A833 4,1
Error in line 54: A557 S490 48,8
Error in line 61: UjWHtdH A557 95,8
Error in line 66: QZJPX4he S926 17,0
Error in line 70: zdYX S490 82,9
Error in line 69: pbC A833 7,4
Error in line 85: zdYX A833 66,98
Error in line 80: UjWHtdH S926 90,0
Error in line 93: pbC A557 12,6
Error in line 97: Hsd0jPqi A833 159,9
Error in line 112: QZJPX4he S490 51,3
Error in line 120: f03o2S49093,7
Error in line 116: f03o2 S490 35,9
Error in line 111: pbC A833 11,8
Error in line 126: A557 A557 96,2
Error in line 121: f03o2 S926 85,5
Error in line 128: A557 A833 41,9
Error in line 115: zdYX A833 1,3
Error in line 153: Hsd0jPqi A557 16,3
Error in line 165: A557 S926 45,2
Error in line 169: Hsd0jPqi S926 96,5
Error in line 173: zdYX A557 33,3
Error in line 163: UjWHtdH S490 14,5
Error in line 178: zdYX A833 35,4
Error in line 160: f03o2 A833 42,8
Error in line 187: QZJPX4he S926 37,7
Error in line 192: Hsd0jPqi S490 314,4
Error in line 202: Hsd0jPqi S926 43,8
Error in line 207: A557 A833 51,6
Error in line 194: QZJPX4he A833 89,4
Error in line 209: QZJPX4he A557 11,7
Error in line 214: zdYX A833 16,7
Error in line 218: QZJPX4he A833 47,3
Error in line 229: A557±A833±7,4
Error in line 225: A557 S490 15,3
Error in line 237: QZJPX4he A833 84,7
Error in line 239: Hsd0jPqi S490 75,6
Error in line 243: zdYX S490 98,1
Error in line 231: A557 A833 18,2
